@@ -68,7 +68,8 @@ class KeysStorageService(LocalService):
         self.starting_deferred = Deferred()
         self.starting_deferred.addErrback(lg.errback)
         if keys_synchronizer.is_synchronized() and index_synchronizer.is_synchronized():
-            self.starting_deferred.callback(True)
+            if not self.starting_deferred.called:
+                self.starting_deferred.callback(True)
         else:
             lg.warn('can not start service_my_data right now, keys_synchronizer.is_synchronized=%r index_synchronizer.is_synchronized=%r' % (
                 keys_synchronizer.is_synchronized(), index_synchronizer.is_synchronized()))
@@ -84,18 +85,22 @@ class KeysStorageService(LocalService):
         from logs import lg
         from services import driver
         if self.starting_deferred:
-            self.starting_deferred.callback(True)
+            if not self.starting_deferred.called:
+                self.starting_deferred.callback(True)
             self.starting_deferred = None
         if driver.is_enabled('service_my_data'):
-            lg.info('my storage is ready, starting service_my_data()')
-            driver.start_single('service_my_data')
+            if not driver.is_started('service_my_data'):
+                lg.info('my storage is ready, starting service_my_data()')
+                driver.start_single('service_my_data')
 
     def _on_my_storage_not_ready_yet(self, evt):
         from logs import lg
         from services import driver
         if self.starting_deferred:
-            self.starting_deferred.errback(Exception('my storage is not ready yet'))
+            if not self.starting_deferred.called:
+                self.starting_deferred.errback(Exception('my storage is not ready yet'))
             self.starting_deferred = None
         if driver.is_enabled('service_my_data'):
-            lg.info('my storage is not ready yet, stopping service_my_data()')
-            driver.stop_single('service_my_data')
+            if not driver.is_started('service_my_data'):
+                lg.info('my storage is not ready yet, stopping service_my_data()')
+                driver.stop_single('service_my_data')
