@@ -2,6 +2,15 @@ Change Log
 ==========
 
 
+2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
+
+* big rework in io_throttle
+* added file_up() and file_down() state machines (#378)
+* changes in service_my_data()
+* bug fix in sorage.accounting
+
+
+
 2019-08-15 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
 
 *  added option services/identity-propagate/automatic-rotate-enabled (#377)
